--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,10 +13,24 @@ jobs:
 
     strategy:
       matrix:
-        php: [8.1, 8.2]
-        laravel: [9.*]
+        php: [8.1]
+        laravel: [9.*, 10.*]
         stability: [prefer-lowest, prefer-stable]
         os: [ubuntu-latest]
+        include:
+          - laravel: 9.*
+          - laravel: 10.*
+          - os: windows-latest
+            php: 8.1
+            laravel: 9.*
+            stability: prefer-stable
+          - os: windows-latest
+            php: 8.1
+            laravel: 10.*
+            stability: prefer-stable
+        exclude:
+          - laravel: 9.*
+            php: 7.4
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
