--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,12 @@
     "require": {
         "php": "^8.1",
         "stillat/blade-parser": "^1.2",
-        "statamic/cms": "^3.4",
-        "laravel/framework": "^9.36"
+        "statamic/cms": "^4",
+        "laravel/framework": "^9.36 || ^10"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5 || ^9.0",
-        "orchestra/testbench": "*",
+        "orchestra/testbench": "^7.0 || ^8.0",
         "laravel/pint": "^1.4"
     },
     "config": {
